--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <li><a href="school.html">school</a></li>
         <li><a href="contact.html">contact</a></li>
     </u1>
+    <h1>contents</h1>
+    <img src="images/pexels-manuela-adler-949194.jpg"/>
     
 </body>
 </html>
