--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
         <li><a href="gallery.html">gallery</a></li>
         <li><a href="school.html">school</a></li>
         <li><a href="contact.html">contact</a></li>
+        <li><a href="dvs.html">divs</a></li>
     </u1>
     <br>
     <h1>contents</h1>
